FIXED + aligned the content with the nav bar

--- a/test-site/styles/style.css
+++ b/test-site/styles/style.css
@@ -273,13 +273,13 @@ section /* CSS For all the content */
 {
     display: grid;
     grid-template-columns: auto auto auto;
-    margin: 0 20px;
+    margin: 0 100px;
 }
 
 .content-containter div p
 {
     font-family: 'Noto Sans JP', sans-serif;
-    margin: 30px 0;
+    margin: 30px 10px;
 }
 
 .content-containter h2 
